fixed scrollbar popping up during animation

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -21,6 +21,7 @@ body {
     z-index: 1;
     background: $white;
     font-family: 'Roboto';
+    overflow: hidden;
 }
 
 .content {
